--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -76,10 +76,14 @@
             <div class="row">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3034.5134415269854!2d-3.3531636846019586!3d40.486027979357104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd21aa4be9338a1e4!2sTecno%20Services%20DISTRIBUIDOR%20DIGI!5e0!3m2!1ses!2ses!4v1583001977332!5m2!1ses!2ses"
-                    width="50%" height="400" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                    width="33%" height="400" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d758.6333625892955!2d-3.3479821708225597!3d40.48558541871315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4249483d1d7ea1%3A0x619ccba3480f34ad!2sCentro%20Comercial%20El%20Val!5e0!3m2!1ses!2ses!4v1585225356488!5m2!1ses!2ses"
-                    width="50%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    width="33%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3034.0890401694496!2d-3.375804084292172!3d40.49541405877358!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd42497a22ae8665%3A0x76d77a5fc5f17b08!2sCalle%20Gerardo%20Diego%2C%208%2C%2028806%20Alcal%C3%A1%20de%20Henares%2C%20Madrid!5e0!3m2!1ses!2ses!4v1621675946020!5m2!1ses!2ses"
+                    width="33%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
                     tabindex="0"></iframe>
             </div>
         </div>
@@ -175,9 +179,10 @@
     <footer class="container m-auto">
         <div class=" row">
             <div class="col-lg-6 col-12">
- <a href="./politica-privacidad" target="_blank" rel="noopener noreferrer">POLÍTICA</a> | <a
+                <a href="./politica-privacidad" target="_blank" rel="noopener noreferrer">POLÍTICA</a> | <a
                     href=".//avisolegal">AVISO
-                    LEGAL</a> | <a href="./politica-cookies" target="_blank" rel="noopener noreferrer">COOKIES</a>            </div>
+                    LEGAL</a> | <a href="./politica-cookies" target="_blank" rel="noopener noreferrer">COOKIES</a>
+            </div>
             <div class="col-lg-6 col-12 text-right">
                 © 2020, realizado por <a href="https://joeldev.es">JOELDEV</a> para una mejor web
             </div>
