--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -159,6 +159,7 @@
                         <b>Domingo</b> Cerrado <br>
                         <b>Tienda 1:</b> Avda. Lope de Figueroa, 10 28804 Alcalá de Henares <br>
                         <b>Tienda 2:</b> Avda. Valladolid, 2 C.C.El val Loc.234 <br>
+                         <b>Tienda 3:</b> Calle Gerardo Diego, 8, 28806, Alcalá de Henares <br>
                         <b>Móvil:</b> 602 24 32 34 <br>
                         <b class="">info@tecnoservices.es</b>
                     </p>
